--- a/config.toml
+++ b/config.toml
@@ -30,12 +30,13 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
   [[params.navlinks]]
   name = "Register"
-  url = "register.html"  
+  url = "https://goo.gl/forms/oR3u2z9OMdRKj7uo2"  
 
-  [[params.navlinks]]
-  name = "Career panel"
-  url = "event/6_panel"  
-  
+
+#  [[params.navlinks]]
+#  name = "Career panel"
+#  url = "event/6_panel"  
+
   [[params.navlinks]]
   name = "WiDS Conference Website"
   url = "https://www.widsconference.org/"  
